--- a/Esra.Web/Views/SalaryScale/Details.cshtml
+++ b/Esra.Web/Views/SalaryScale/Details.cshtml
@@ -25,26 +25,12 @@
 
         $(document).ready(function () {
             var availableTitleCodes = [];
-            var availableTitles = [];
-
-            //            $($("#titlecode-drop-down")[0].options).each(function (i, val) {
-            //                availableTitleCodes[i] = $(val).val();
-            //            });
 
             $($("#title-drop-down")[0].options).each(function (i, val) {
-                availableTitles[i] = $(val).text();
+                //availableTitles[i] = $(val).text();
                 availableTitleCodes[i] = $(val).val();
                 availableTitleCodes.sort();
             });
-
-            //            $("#titlecode-drop-down").combobox({
-            //                source: availableTitleCodes,
-            //                delay: 0,
-            //                selected: function (event, ui) {
-            //                    // Event handling code goes here.
-            //                    $(this).parents('form').submit();
-            //                }
-            //            }); // combobox });
 
             $("input#titlecode-textbox").autocomplete({
                 source: availableTitleCodes,
@@ -58,7 +44,6 @@
             }); // autocomplete
 
             $("#title-drop-down").combobox({
-                source: availableTitles,
                 delay: 0,
                 selected: function (event, ui) {
                     //debugger;
@@ -71,11 +56,6 @@
                 //debugger;
                 $(this).parents('form').submit();
             });
-
-            //        $('input#titlecode-textbox').change(function () {
-            //            //debugger;
-            //            $(this).parents('form').submit();
-            //        });
 
             $("#toggle").click(function () {
                 $("#title-drop-down").toggle();
