--- a/Esra.Web/Views/Shared/_Layout.cshtml
+++ b/Esra.Web/Views/Shared/_Layout.cshtml
@@ -22,14 +22,11 @@
     @*<script src="//ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.js" type="text/javascript"></script>*@
     <script src="//ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"
         type="text/javascript"></script>
-    @*<script type="text/javascript" src="../../Scripts/jquery-dateFormat.js"></script>*@
     <script src="@Url.Script("jquery-dateFormat.js")" type="text/javascript"></script>
-    @*<script type="text/javascript" src="../../Scripts/jquery.ui.autocomplete.js"></script>*@
-    @* <script type="text/javascript" src="../../Scripts/jquery.ui.combobox.js"></script>*@
     <script src="@Url.Script("jquery.ui.combobox.js")" type="text/javascript"></script>
-    @*<link href="@Url.Css("combobox-style.css")" rel="stylesheet" type="text/css" />*@
-    @*<script type="text/javascript" src="../../Scripts/jquery.combobox.js"></script>*@
     <script src="@Url.Script("jquery.fn.sortElements.js")" type="text/javascript"></script>
+    <link href="@Url.Css("ui.multiselect.css")" rel="stylesheet" type="text/css" />
+    <script src="@Url.Script("ui.multiselect.js")" type="text/javascript"></script>
     @if (false)
     { //Load the jquery docs for intellisense
         <script src="../../Scripts/jquery-1.6-vsdoc.js" type="text/javascript"></script>
@@ -59,6 +56,72 @@
         * html .ui-autocomplete
         {
             height: 200px;
+        }
+        .selected
+        {
+            background-color: DodgerBlue;
+            color: White;
+        }
+        .highlight
+        {
+            background: yellow;
+        }
+    </style>
+    <style type='text/css'>
+        .wideMultiSelect
+        {
+            background-color: #fcfcfc;
+            border: 1px solid #000;
+            width: 800px;
+            margin-top: 5px;
+            height: 200px;
+            max-height: 200px;
+            overflow: auto;
+        }
+
+        .wideMultiSelect > .row
+        {
+            border-bottom: 1px dotted #ccc;
+            padding: 2px;
+        }
+
+        .wideMultiSelect > .row:last-child
+        {
+            border-bottom: 0;
+        }
+
+        .wideMultiSelect > .row > .delete
+        {
+            cursor: pointer;
+            margin-bottom: -2px;
+        }
+
+        .narrowMultiSelect
+        {
+            background-color: #fcfcfc;
+            border: 1px solid #000;
+            width: 275px;
+            margin-top: 5px;
+            height: 200px;
+            max-height: 200px;
+            overflow: auto;
+        }
+
+        .narrowMultiSelect > .row
+        {
+            border-bottom: 1px dotted #ccc;
+            padding: 2px;
+        }
+
+        .narrowMultiSelect > .row:last-child
+        {
+            border-bottom: 0;
+        }
+
+        .narrowMultiSelect > .row > .delete
+        {
+            cursor: pointer;
+            margin-bottom: -2px;
         }
     </style>
 </head>
